Add Logo and Update main page
Adding centralperf logo
Adding clegallic tag

--- a/index.html
+++ b/index.html
@@ -1,30 +1,29 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+<!DOCTYPE html>
+<html><head>
+    <meta charset="utf-8" >
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" >
     <title>Central Perf Project by centralperf</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="stylesheets/styles.css" >
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css" >
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" >
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper" >
       <header>
         <h1>Central Perf Project</h1>
-        <p>Performance A A Service</p>
+        <img src="/resources/img/Centralperf-logo-300.png" alt="Performance As A Service" >
 
 
-        <p class="view"><a href="https://github.com/centralperf">View My GitHub Profile</a></p>
+        <p class="view" ><a href="https://github.com/centralperf" >View project on GitHub</a></p>
 
       </header>
       <section>
         <h3>
-<a name="welcome-to-central-perf-project" class="anchor" href="#welcome-to-central-perf-project"><span class="octicon octicon-link"></span></a>Welcome to Central Perf Project.</h3>
+<a name="welcome-to-central-perf-project" class="anchor" href="#welcome-to-central-perf-project" ><span class="octicon octicon-link" ></span></a>Welcome to Central Perf Project.</h3>
 
 <p>This project was made to help users to manage performance testing session from a central server.
 Web UI will offer to organize your projects/run/scripts.</p>
@@ -35,18 +34,18 @@ Web UI will offer to organize your projects/run/scripts.</p>
 
 <p>Central Perf is still in construction (first beta coming soon) and will be distributed under AGPL 3 licence.</p>
 
-<hr><p>Project creators:</p>
+<hr/><p>Project creators:</p>
 
 <ul>
-<li>Charles LE GALLIC (toDefine)</li>
-<li>Dominique CLAIRAC (<a href="https://github.com/dclairac" class="user-mention">@dclairac</a>)</li>
+<li>Charles LE GALLIC (<a href="https://github.com/clegallic" class="user-mention" >@clegallic</a>)</li>
+<li>Dominique CLAIRAC (<a href="https://github.com/dclairac" class="user-mention" >@dclairac</a>)</li>
 </ul>
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages — Theme by <a href="https://github.com/orderedlist" >orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="javascripts/scale.fix.js" ></script>
     
-  </body>
-</html>
+  
+</body></html>
