--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@ Web UI will offer to organize your projects/run/scripts.</p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js" ></script>
-    
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-47569261-1', 'centralperf.org');
+  ga('send', 'pageview');
+
+</script>
   
 </body></html>
