--- a/index.html
+++ b/index.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="http://getbootstrap.com/assets/ico/favicon.ico">
+<html lang="en">
+	<head>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	    <meta charset="utf-8">
+	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <meta name="viewport" content="width=device-width, initial-scale=1">
+	    <meta name="description" content="Central Perf - Web based load testing and monitoring">
+	    <meta name="author" content="Dominique Clairac, Charles Le Gallic">
+	
+	    <title>Central Perf - "Metrology As A Service"</title>
+	
+	    <!-- Bootstrap core CSS -->
+	    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+	
+	    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	    <!--[if lt IE 9]>
+	      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	    <![endif]-->
+	
+	    <!-- Custom styles for this template -->
+	    <link href="stylesheets/carousel.css" rel="stylesheet">
+		<style type="text/css" id="holderjs-style"></style>
+	</head>
 
-    <title>Central Perf - "Metrology As A Service"</title>
+	<body>
 
-    <!-- Bootstrap core CSS -->
-    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Custom styles for this template -->
-    <link href="stylesheets/carousel.css" rel="stylesheet">
-  <style type="text/css" id="holderjs-style"></style></head>
-<!-- NAVBAR
-================================================== -->
-  <body>
-
+		<!-- NAVBAR
+		================================================== -->
         <div class="navbar navbar-fixed-top" role="navigation" style="background-color: #FFF">
           <div class="container">
             <div class="navbar-header">
@@ -42,8 +41,9 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-				<li><a href="#">Gallery</a></li>
+                <li><a href="#" class="active">Home</a></li>
+				<li><a href="gallery.html">Gallery</a></li>
+				<li><a href="credits.html">About</a></li>
                 <li><a href="http://github.com/centralperf/centralperf/">Project page on GitHub</a></li>
               </ul>
             </div>
@@ -108,7 +108,7 @@
             <div class="carousel-caption">
               <h1>Discover <strong>Central Perf</strong></h1>
               <p>Checkout the screenshot gallery, download our "ready to use" bundles or read the documentation to learn more...</p>
-              <p><a class="btn btn-lg btn-default" href="#" role="button">Browse gallery</a></p>
+              <p><a class="btn btn-lg btn-default" href="gallery.html" role="button">Browse gallery</a></p>
             </div>
           </div>
         </div>
@@ -132,13 +132,13 @@
           style="width: 128px; height: 128px;" class="img-circle" alt="Download">
           <h2>Download</h2>
           <p>Try Central Perf : download pre-build quckstart bundles. Uncompress the archive, and launch !</p>
-          <p><a class="btn btn-default" href="#" role="button">Download »</a></p>
+          <p><a class="btn btn-default" href="#" role="button">Downloads »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
 		  <img src="resources/img/1395254537_launch.png" style="width: 128px; height: 128px;" class="img-circle" alt="Launch">
           <h2>Launch</h2>
           <p>Read setup instructions and guides to launch your first runs.</p>
-          <p><a class="btn btn-default" href="#" role="button">Documentation »</a></p>
+          <p><a class="btn btn-default" href="https://github.com/centralperf/centralperf/wiki/Installation-Guide" role="button">Documentation »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img src="resources/img/1395254927_186283.ico" style="width: 128px; height: 128px;" class="img-circle" alt="Lean more">
