Credits, photos and downloads for 1.0.0-BETA-1

--- a/credits.html
+++ b/credits.html
@@ -55,7 +55,8 @@
                 <li><a href="index.html">Home</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
 				<li><a href="#" class="active">About</a></li>
-                <li><a href="http://github.com/centralperf/centralperf/">Project page on GitHub</a></li>
+                <li><a href="http://github.com/centralperf/centralperf/">Project page on GitHub&nbsp;<span class="glyphicon glyphicon-new-window"/>
+                </a></li>
               </ul>
             </div>
           </div>
@@ -65,10 +66,13 @@
         <h1>Authors</h1>
         <div class="row">
 			<div class="media col-md-6">
-			    <img class="media-object pull-left" src="http://www.gravatar.com/avatar/nope" alt="Dominique Clairac">
+				<a class="pull-left" href="http://www.sqli.com/eng/">
+				    <img class="media-object pull-left" src="resources/img/credits/dclairac.jpeg" alt="Dominique Clairac" style="width: 80px;">
+				</a>
 			  <div class="media-body">
 			    <h4 class="media-heading">Dominique CLAIRAC</h4>
-			    ...
+			    Dominique is a french IT Senior Consultant at Alcyonix (SQLI Group) with more than 11 years of experience in IT operations as well as in software development.
+He has now specialized in auditing IT production sites with a special focus on performance and robustness. He is also <a href="https://www.redhat.com/wapps/training/certification/verify.html?certNumber=705010633800073">JBoss Certified (JCAA)</a> and specialist on Red Hat solutions.
 			  </div>
 			</div>
 			<div class="media col-md-6" style="margin-top:0px">
@@ -146,7 +150,7 @@
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>© 2014 Central Perf Team<br/>
-		Code licenced under the <a href="http://www.gnu.org/licenses/agpl-3.0.html">AGPL licence</a></p>
+		Code licenced under the <a href="http://www.gnu.org/licenses/agpl-3.0.html">AGPL license</a></p>
       </footer>
 
     </div><!-- /.container -->
