--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
                 <li><a href="index.html">Home</a></li>
 				<li><a href="gallery.html" class="active">Gallery</a></li>
 				<li><a href="credits.html">About</a></li>
-                <li><a href="http://github.com/centralperf/centralperf/">Project page on GitHub</a></li>
+                <li><a href="http://github.com/centralperf/centralperf/">Project page on GitHub&nbsp;<span class="glyphicon glyphicon-new-window"/></a></li>
               </ul>
             </div>
           </div>
@@ -89,6 +89,24 @@
       </div>
 
       <hr class="featurette-divider">
+      
+ 	  <div class="row featurette">
+ 	  	<div class="col-md-5">
+		  <img src="resources/img/1395254192_internet-download.png"	
+          style="width: 128px; height: 128px;" class="img-circle" alt="Download">
+          <h2>Download</h2>
+          <p><a class="btn btn-default" href="http://centralperf.amoae.com/releases/quickstarts/centralperf-1.0.0-BETA-1-tomcat-jmeter-quickstart.zip" role="button" title="Ready to use bundle with Tomcat 7, jMeter and Central Perf">Quickstart bundle <span class="glyphicon glyphicon-download-alt"/></a>
+          or <a class="btn btn-default" href="http://centralperf.amoae.com/releases/centralperf.war" role="button" title="Java Web ARchive only">WAR only <span class="glyphicon glyphicon-download-alt"/></a>
+          </p>
+          <p>Current version : 1.0.0-BETA-1, released 04/07/2014</p>
+      	</div>
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Try it by yourself<br/><span class="text-muted">Download the latest version</span></h2>
+          <p class="lead">Uncompress the archive, and launch !</p>
+        </div>      	
+	  </div>      
+	  
+	  <hr class="featurette-divider">
       <!-- /END THE FEATURETTES -->
 
 
@@ -96,7 +114,7 @@
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>© 2014 Central Perf Team<br/>
-		Code licenced under the <a href="http://www.gnu.org/licenses/agpl-3.0.html">AGPL licence</a></p>
+		Code licenced under the <a href="http://www.gnu.org/licenses/agpl-3.0.html">AGPL license</a></p>
       </footer>
 
     </div><!-- /.container -->
