--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li><a href="#" class="active">Home</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
 				<li><a href="credits.html">About</a></li>
-                <li><a href="http://github.com/centralperf/centralperf/">Project page on GitHub</a></li>
+                <li><a href="http://github.com/centralperf/centralperf/">Project page on GitHub&nbsp;<span class="glyphicon glyphicon-new-window"/></a></li>
               </ul>
             </div>
           </div>
@@ -132,7 +132,10 @@
           style="width: 128px; height: 128px;" class="img-circle" alt="Download">
           <h2>Download</h2>
           <p>Try Central Perf : download pre-build quckstart bundles. Uncompress the archive, and launch !</p>
-          <p><a class="btn btn-default" href="#" role="button">Downloads »</a></p>
+          <p><a class="btn btn-default" href="http://centralperf.amoae.com/releases/quickstarts/centralperf-1.0.0-BETA-1-tomcat-jmeter-quickstart.zip" role="button" title="Ready to use bundle with Tomcat 7, jMeter and Central Perf">Quickstart bundle <span class="glyphicon glyphicon-download-alt"/></a>
+          or <a class="btn btn-default" href="http://centralperf.amoae.com/releases/centralperf.war" role="button" title="Java Web ARchive only">WAR only <span class="glyphicon glyphicon-download-alt"/></a>
+          </p>
+          <p>Current version : 1.0.0-BETA-1, released 04/07/2014</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
 		  <img src="resources/img/1395254537_launch.png" style="width: 128px; height: 128px;" class="img-circle" alt="Launch">
@@ -148,17 +151,11 @@
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
-
-      <!-- START THE FEATURETTES -->
-
-      <!-- /END THE FEATURETTES -->
-
-
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>© 2014 Central Perf Team<br/>
-		Code licenced under the <a href="http://www.gnu.org/licenses/agpl-3.0.html">AGPL licence</a></p>
+		Code licenced under the <a href="http://www.gnu.org/licenses/agpl-3.0.html">AGPL license</a></p>
       </footer>
 
     </div><!-- /.container -->
