Fix Home page GitHub project link

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <img src="resources/img/1395254927_186283.ico" style="width: 128px; height: 128px;" class="img-circle" alt="Lean more">
           <h2>Learn more</h2>
           <p>Browse project on GitHub to review source code, issues, milestones, wiki and more !</p>
-          <p><a class="btn btn-default" href="#" role="button">GitHub project page »</a></p>
+          <p><a class="btn btn-default" href="http://github.com/centralperf/centralperf/" role="button">GitHub project page »</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
