--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 		  <img src="resources/img/1395254192_internet-download.png"	
           style="width: 128px; height: 128px;" class="img-circle" alt="Download">
           <h2>Download</h2>
-          <p>Try Central Perf : download pre-build quckstart bundles. Uncompress the archive, and launch !</p>
+          <p>Try Central Perf : download pre-build quickstart bundles. Uncompress the archive, and launch !</p>
           <p><a class="btn btn-default" href="http://centralperf.amoae.com/releases/quickstarts/centralperf-1.0.0-BETA-1-tomcat-jmeter-quickstart.zip" role="button" title="Ready to use bundle with Tomcat 7, jMeter and Central Perf">Quickstart bundle <span class="glyphicon glyphicon-download-alt"/></a>
           or <a class="btn btn-default" href="http://centralperf.amoae.com/releases/war/centralperf.war" role="button" title="Java Web ARchive only">WAR only <span class="glyphicon glyphicon-download-alt"/></a>
           </p>
