Add Google Analytics Change GitHub link to open in a new window

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li><a href="#" class="active">Home</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
 				<li><a href="credits.html">About</a></li>
-                <li><a href="http://github.com/centralperf/centralperf/">Project page on GitHub&nbsp;<span class="glyphicon glyphicon-new-window"/></a></li>
+                <li><a href="http://github.com/centralperf/centralperf/" target="_blank">Project page on GitHub&nbsp;<span class="glyphicon glyphicon-new-window"/></a></li>
               </ul>
             </div>
           </div>
@@ -167,6 +167,16 @@
     <script src="javascripts/jquery.min.js"></script>
     <script src="javascripts/bootstrap.min.js"></script>
     <script src="javascripts/docs.min.js"></script>
-  
+
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	
+	  ga('create', 'UA-47569261-1', 'centralperf.org');
+	  ga('send', 'pageview');
+	
+	</script>  
 
 </body></html>
