--- a/credits.html
+++ b/credits.html
@@ -55,7 +55,7 @@
                 <li><a href="index.html">Home</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
 				<li><a href="#" class="active">About</a></li>
-                <li><a href="http://github.com/centralperf/centralperf/">Project page on GitHub&nbsp;<span class="glyphicon glyphicon-new-window"/>
+                <li><a href="http://github.com/centralperf/centralperf/" target="_blank">Project page on GitHub&nbsp;<span class="glyphicon glyphicon-new-window"/>
                 </a></li>
               </ul>
             </div>
@@ -162,6 +162,17 @@ He has now specialized in auditing IT production sites with a special focus on p
     <script src="javascripts/bootstrap.min.js"></script>
     <script src="javascripts/docs.min.js"></script>
 	<script src="javascripts/jsxml.js"></script>
+
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	
+	  ga('create', 'UA-47569261-1', 'centralperf.org');
+	  ga('send', 'pageview');
+	
+	</script>
 
 </body>
 </html>
