Add email contact information

--- a/credits.html
+++ b/credits.html
@@ -70,7 +70,7 @@
 				    <img class="media-object pull-left" src="resources/img/credits/dclairac.jpeg" alt="Dominique Clairac" style="width: 80px;">
 				</a>
 			  <div class="media-body">
-			    <h4 class="media-heading">Dominique CLAIRAC</h4>
+			    <h4 class="media-heading"><a href="mailto:dominique@centralperf.org">Dominique CLAIRAC</a></h4>
 			    Dominique is a french IT Senior Consultant at Alcyonix (SQLI Group) with more than 11 years of experience in IT operations as well as in software development.
 He has now specialized in auditing IT production sites with a special focus on performance and robustness. He is also <a href="https://www.redhat.com/wapps/training/certification/verify.html?certNumber=705010633800073">JBoss Certified (JCAA)</a> and specialist on Red Hat solutions.
 			  </div>
@@ -80,7 +80,7 @@ He has now specialized in auditing IT production sites with a special focus on p
 			    <img class="media-object" src="http://www.gravatar.com/avatar/1c0003c88b48251d9e555e125162058a" alt="Charles Le Gallic">
 			  </a>
 			  <div class="media-body">
-			    <h4 class="media-heading">Charles LE GALLIC</h4>
+			    <h4 class="media-heading"><a href="mailto:charles@centralperf.org">Charles LE GALLIC</a></h4>
 			    Founder of <a href="http://www.amoae.com">AMOAE</a> in february 2012, a french IT consulting company, Charles is an IT consultant since 2002, but coding is still one of it's favorite hobby.
 			  </div>
 			</div> 
@@ -149,7 +149,7 @@ He has now specialized in auditing IT production sites with a special focus on p
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>© 2014 Central Perf Team<br/>
+        <p>© 2014 <a href="mailto:contact@centralperf.org">Central Perf Team</a><br/>
 		Code licenced under the <a href="http://www.gnu.org/licenses/agpl-3.0.html">AGPL license</a></p>
       </footer>
 
