--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Why <strong>Central Perf</strong> ?</h1>
-              <p>Effective performance testing requires you to combine several tools
+              <p>Effective <strong>load testing</strong> requires to combine several tools
               <!-- 
 				  <ul class="list-unstyled" style="align:left">
 					  <li><code>Build</code> script with jMeter, Gatling or others</li>
@@ -154,7 +154,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>© 2014 Central Perf Team<br/>
+        <p>© 2014 <a href="mailto:contact@centralperf.org">Central Perf Team</a><br/>
 		Code licenced under the <a href="http://www.gnu.org/licenses/agpl-3.0.html">AGPL license</a></p>
       </footer>
 
