--- a/gallery.html
+++ b/gallery.html
@@ -113,7 +113,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>© 2014 Central Perf Team<br/>
+        <p>© 2014 <a href="mailto:contact@centralperf.org">Central Perf Team</a><br/>
 		Code licenced under the <a href="http://www.gnu.org/licenses/agpl-3.0.html">AGPL license</a></p>
       </footer>
 
