Add C3js and D3js licence and links

--- a/credits.html
+++ b/credits.html
@@ -125,6 +125,13 @@ He has now specialized in auditing IT production sites with a special focus on p
 				<li>
 					moment.js <a href="http://en.wikipedia.org/wiki/MIT_License">MIT</a>
 				</li>
+				<li>
+					<a href="http://c3js.org/">C3js</a> <a href="http://en.wikipedia.org/wiki/MIT_License">MIT</a>
+				</li>
+				<li>
+					<a href="http://d3js.org/">D3js</a> <a href="http://opensource.org/licenses/BSD-3-Clause">BSD</a>
+				</li>
+				
 			</ul>
 		</div>
 		<h2>Server side</h2>
