Change colorized pic to to blue and white one
Delete colorized pic to and replace them by Blue & White one to have
uniform theme

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-		  <img src="resources/img/1395254192_internet-download.png"	
+		  <img src="resources/img/picto_download.png"	
           style="width: 128px; height: 128px;" class="img-circle" alt="Download">
           <h2>Download</h2>
           <p>Try Central Perf : download pre-build quickstart bundles. Uncompress the archive, and launch !</p>
@@ -138,13 +138,13 @@
           <p>Current version : 1.0.0-BETA-1, released 04/07/2014</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-		  <img src="resources/img/1395254537_launch.png" style="width: 128px; height: 128px;" class="img-circle" alt="Launch">
+		  <img src="resources/img/picto_launch.png" style="width: 128px; height: 128px;" class="img-circle" alt="Launch">
           <h2>Launch</h2>
           <p>Read setup instructions and guides to launch your first runs.</p>
           <p><a class="btn btn-default" href="https://github.com/centralperf/centralperf/wiki/Installation-Guide" role="button">Documentation »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img src="resources/img/1395254927_186283.ico" style="width: 128px; height: 128px;" class="img-circle" alt="Lean more">
+          <img src="resources/img/picto_github.png" style="width: 128px; height: 128px;" class="img-circle" alt="Lean more">
           <h2>Learn more</h2>
           <p>Browse project on GitHub to review source code, issues, milestones, wiki and more !</p>
           <p><a class="btn btn-default" href="http://github.com/centralperf/centralperf/" role="button">GitHub project page »</a></p>
