--- a/index.html
+++ b/index.html
@@ -132,10 +132,11 @@
           style="width: 128px; height: 128px;" class="img-circle" alt="Download">
           <h2>Download</h2>
           <p>Try Central Perf : download pre-build quickstart bundles. Uncompress the archive, and launch !</p>
-          <p><a class="btn btn-default" href="http://centralperf.amoae.com/releases/quickstarts/centralperf-1.0.0-BETA-1-tomcat-jmeter-quickstart.zip" role="button" title="Ready to use bundle with Tomcat 7, jMeter and Central Perf">Quickstart bundle <span class="glyphicon glyphicon-download-alt"/></a>
+          <p><a class="btn btn-default" href="http://centralperf.amoae.com/releases/quickstarts/centralperf-1.0.0-BETA-2-tomcat-jmeter-quickstart.zip" role="button" title="Ready to use bundle with Tomcat 7, jMeter and Central Perf">Quickstart bundle <span class="glyphicon glyphicon-download-alt"/></a>
           or <a class="btn btn-default" href="http://centralperf.amoae.com/releases/war/centralperf.war" role="button" title="Java Web ARchive only">WAR only <span class="glyphicon glyphicon-download-alt"/></a>
           </p>
-          <p>Current version : 1.0.0-BETA-1, released 04/07/2014</p>
+          <p>Current version : 1.0.0-BETA-2, released July 11, 2014</p>
+          <a href="https://github.com/centralperf/centralperf/issues?milestone=3&state=closed">Release notes</a>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
 		  <img src="resources/img/picto_launch.png" style="width: 128px; height: 128px;" class="img-circle" alt="Launch">
